Source/JavaScriptCore/API/glib/JSCValue.cpp
@@ -1125,9 +1125,9 @@ static void jscValueObjectDefinePropertyAccessor(JSCValue* value, const char* pr
  * @property_name: the name of the property to define
  * @flags: #JSCValuePropertyFlags
  * @property_type: the #GType of the property
- * @getter: (scope async) (nullable): a #GCallback to be called to get the property value
- * @setter: (scope async) (nullable): a #GCallback to be called to set the property value
- * @user_data: (closure): user data to pass to @getter and @setter
+ * @getter: (scope async) (nullable) (closure user_data): a #GCallback to be called to get the property value
+ * @setter: (scope async) (nullable) (closure user_data): a #GCallback to be called to set the property value
+ * @user_data: user data to pass to @getter and @setter
  * @destroy_notify: (nullable): destroy notifier for @user_data
  *
  * Define or modify a property with @property_name in object referenced by @value. When the
@@ -1181,7 +1181,7 @@ static GRefPtr<JSCValue> jscValueFunctionCreate(JSCContext* context, const char*
  * @context: a #JSCContext:
  * @name: (nullable): the function name or %NULL
  * @callback: (scope async): a #GCallback.
- * @user_data: (closure): user data to pass to @callback.
+ * @user_data: user data to pass to @callback.
  * @destroy_notify: (nullable): destroy notifier for @user_data
  * @return_type: the #GType of the function return value, or %G_TYPE_NONE if the function is void.
  * @n_params: the number of parameter types to follow or 0 if the function doesn't receive parameters.
@@ -1222,7 +1222,7 @@ JSCValue* jsc_value_new_function(JSCContext* context, const char* name, GCallbac
  * @context: a #JSCContext
  * @name: (nullable): the function name or %NULL
  * @callback: (scope async): a #GCallback.
- * @user_data: (closure): user data to pass to @callback.
+ * @user_data: user data to pass to @callback.
  * @destroy_notify: (nullable): destroy notifier for @user_data
  * @return_type: the #GType of the function return value, or %G_TYPE_NONE if the function is void.
  * @n_parameters: the number of parameters
@@ -1261,7 +1261,7 @@ JSCValue* jsc_value_new_functionv(JSCContext* context, const char* name, GCallba
  * @context: a #JSCContext
  * @name: (nullable): the function name or %NULL
  * @callback: (scope async): a #GCallback.
- * @user_data: (closure): user data to pass to @callback.
+ * @user_data: user data to pass to @callback.
  * @destroy_notify: (nullable): destroy notifier for @user_data
  * @return_type: the #GType of the function return value, or %G_TYPE_NONE if the function is void.
  *
@@ -1474,8 +1474,8 @@ WEBKIT_DEFINE_ASYNC_DATA_STRUCT(ArrayBufferDeallocatorContext)
  * @context: A #JSCContext
  * @data: Pointer to a region of memory.
  * @size: Size in bytes of the memory region.
- * @destroy_notify: (nullable): destroy notifier for @user_data.
- * @user_data: (closure): user data.
+ * @destroy_notify: (nullable) (closure user_data): destroy notifier for @user_data.
+ * @user_data: user data.
  *
  * Creates a new %ArrayBuffer from existing @data in memory.
  *
